--- a/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
+++ b/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
@@ -522,7 +522,7 @@
         "id": "RMZktM8dRdPK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 398
         },
         "outputId": "f5418d25-06b5-43c3-9dce-5d649ced4438"
       },
@@ -768,7 +768,7 @@
         "id": "ICrvRCc8ucDZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 224
         },
         "outputId": "de32026d-7e55-42c4-c066-376478f4372f"
       },
@@ -1370,7 +1370,7 @@
         "id": "c1b8c64b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 829
+          "height": 751
         },
         "outputId": "59a1da68-99ae-4c83-af16-1f04454035a3"
       },
@@ -1479,7 +1479,8 @@
         "- بلد الجزائر وعمان يملكان عددا صغيرا من النصوص على الرغم من انتماءهم الى منطقتين بعدد نصوص كبير نسبيا .<br>\n",
         "حسب المدن (cities) <br>\n",
         "-النصوص ليست موزعة بالتساوي بين المدن حيث يوجد ٥ دول فقط بعدد نصوص اكبر اما بقية المدن فعدد النصوص فيها صغير .<br>\n",
-        "مما سبق وجدنا ان البيانات تظهر تركيزا في عدد قليل من المناطق والمدن مما يشير الى توزع غير متساو .<br>\n",
+        "مما سبق وجدنا ان البيانات تظهر تركيزا في عدد قليل من المدن مما يشير الى توزع غير متساو .<br>\n",
+        "الاحظ ايضا ان البيانات في داتا مدار غير متوازنة فقد ظهر ذلك في تمثل عدد النصوص لكل مدينة بينما كان هناك توازن نوعا ما عند تمثيل عدد النصوص على  مستوى البلاد او المناطق حيث ان داتا كادي متوازنة نوعا ما لذلك عند اضافتها مع مدار قل عدم توازن البيانات بشكل ملحوظ  <br>\n",
         "</div>"
       ]
     },
@@ -1561,7 +1562,7 @@
         "id": "pJZ0DAfPRdPd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "outputId": "c6ffb00b-56de-44e3-9dc7-ff0a20c74728"
       },
@@ -2452,7 +2453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "3WFp0g3DQ72V"
       },
@@ -2476,10 +2477,7 @@
         "        dialect: {\n",
         "            word: count\n",
         "            for word, count in dialect_words[dialect].items()\n",
-        "            if count <= threshold and all(\n",
-        "                word not in dialect_words[other_dialect]\n",
-        "                for other_dialect in dialect_words if other_dialect != dialect\n",
-        "            )\n",
+        "            if count ==1\n",
         "        }\n",
         "        for dialect in dialect_words\n",
         "    }\n",
@@ -2504,11 +2502,174 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "def find_distinctive_words(dataframe, column='City', base_threshold=10,low_threshold=3):\n",
+        "    \"\"\"\n",
+        "    يجد الكلمات المميزة لكل لهجة والتي تكرارها يتجاوز عتبة معينة مرتبة بحسب تكرارها.\n",
+        "\n",
+        "    Args:\n",
+        "        dataframe: DataFrame يحتوي على البيانات.\n",
+        "        column: اسم العمود الذي يمثل اللهجات (City, Country, or Region).\n",
+        "        base_threshold: عتبة أساسية يتم تعديلها حسب حجم البيانات وتوازنها.\n",
+        "\n",
+        "    Returns:\n",
+        "        distinctive_words_sorted: قاموس يحتوي على الكلمات المميزة لكل لهجة مرتبة حسب تكرارها.\n",
+        "    \"\"\"\n",
+        "    dialect_words = {}\n",
+        "    all_words = set()\n",
+        "    dialect_sizes = {}  # لحفظ حجم البيانات لكل لهجة\n",
+        "\n",
+        "    for index, row in dataframe.iterrows():\n",
+        "        dialect = row[column]\n",
+        "        if pd.isna(dialect):\n",
+        "            continue\n",
+        "        tokens = row['tokens']\n",
+        "        if dialect not in dialect_words:\n",
+        "            dialect_words[dialect] = Counter()\n",
+        "            dialect_sizes[dialect] = 0  # تهيئة حجم البيانات\n",
+        "        dialect_words[dialect].update(tokens)\n",
+        "        all_words.update(tokens)\n",
+        "        dialect_sizes[dialect] += len(tokens)  # تحديث حجم البيانات\n",
+        "\n",
+        "    distinctive_words = {}\n",
+        "    for dialect in dialect_words:\n",
+        "        # حساب العتبة الديناميكية\n",
+        "        threshold = base_threshold + int(dialect_sizes[dialect] / 1000)\n",
+        "\n",
+        "        # استخدام عتبة منخفضة للمدن ذات عدد نصوص قليل\n",
+        "        if dialect_sizes[dialect] < int(0.017 * len(dataframe)):\n",
+        "            threshold = low_threshold\n",
+        "\n",
+        "        distinctive_words[dialect] = {\n",
+        "            word: count\n",
+        "            for word, count in dialect_words[dialect].items()\n",
+        "            if count > threshold and all(\n",
+        "                word not in dialect_words[other_dialect]\n",
+        "                for other_dialect in dialect_words if other_dialect != dialect\n",
+        "            )\n",
+        "        }\n",
+        "\n",
+        "    distinctive_words_sorted = {\n",
+        "        dialect: dict(sorted(words.items(), key=lambda item: item[1], reverse=True))\n",
+        "        for dialect, words in distinctive_words.items()\n",
+        "    }\n",
+        "\n",
+        "    for dialect, words in distinctive_words_sorted.items():\n",
+        "        print(f\"\\nالكلمات المميزة في لهجة {dialect}:\")\n",
+        "        if words:\n",
+        "            print(', '.join([f\"{word} ({count})\" for word, count in words.items()]))\n",
+        "        else:\n",
+        "            print(\"لا توجد كلمات مميزة تتجاوز العتبة المحددة\")\n",
+        "\n",
+        "    return distinctive_words_sorted"
+      ],
       "metadata": {
-        "id": "ySDEpejjRdQB"
+        "id": "U0Lwayi80WBf"
       },
-      "outputs": [],
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {
+        "id": "ySDEpejjRdQB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "becbc9e6-0bfe-4b2c-9050-f50eba575a12"
+      },
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "الكلمات المميزة في لهجة جدة:\n",
+            "دحين (31)\n",
+            "\n",
+            "الكلمات المميزة في لهجة حلب:\n",
+            "إيمت (28), هلئ (26), مشان (22)\n",
+            "\n",
+            "الكلمات المميزة في لهجة تونس:\n",
+            "بش (332), متع (138), شنيا (120), يلزمني (71), تلاثا (69)\n",
+            "\n",
+            "الكلمات المميزة في لهجة صفاقس:\n",
+            "بارشا (34)\n",
+            "\n",
+            "الكلمات المميزة في لهجة عمّان:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n",
+            "\n",
+            "الكلمات المميزة في لهجة أسوان:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n",
+            "\n",
+            "الكلمات المميزة في لهجة بغداد:\n",
+            "كولش (29)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الجزائر:\n",
+            "تع (69)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الرياض:\n",
+            "ابغى (141)\n",
+            "\n",
+            "الكلمات المميزة في لهجة فصحى:\n",
+            "لديكم (109)\n",
+            "\n",
+            "الكلمات المميزة في لهجة فاس:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n",
+            "\n",
+            "الكلمات المميزة في لهجة صنعاء:\n",
+            "اشتي (116), أشتي (24), ابسر (21), اشل (20)\n",
+            "\n",
+            "الكلمات المميزة في لهجة طرابلس:\n",
+            "هلبه (50)\n",
+            "\n",
+            "الكلمات المميزة في لهجة السلط:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n",
+            "\n",
+            "الكلمات المميزة في لهجة القاهرة:\n",
+            "اد (98)\n",
+            "\n",
+            "الكلمات المميزة في لهجة بنغازي:\n",
+            "هضا (145), هضي (72)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الموصل:\n",
+            "غاح (142), اغيد (140), اطيق (77), اشقد (55), ويحد (49), تطيق (40), اتطيق (36), اشون (26), هسا (22), كثيغ (21)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الخرطوم:\n",
+            "ياتو (29)\n",
+            "\n",
+            "الكلمات المميزة في لهجة مسقط:\n",
+            "أبغا (35), اهني (31), بجم (23)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الاسكندرية:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n",
+            "\n",
+            "الكلمات المميزة في لهجة الرباط:\n",
+            "تسعود (99)\n",
+            "\n",
+            "الكلمات المميزة في لهجة دمشق:\n",
+            "هوة (25)\n",
+            "\n",
+            "الكلمات المميزة في لهجة بيروت:\n",
+            "هيدا (534), عمول (366), رأم (77), وأت (76)\n",
+            "\n",
+            "الكلمات المميزة في لهجة الدوحة:\n",
+            "مسامحة (115), شكثر (89), اخوي (69)\n",
+            "\n",
+            "الكلمات المميزة في لهجة البصرة:\n",
+            "يمته (19)\n",
+            "\n",
+            "الكلمات المميزة في لهجة القدس:\n",
+            "لا توجد كلمات مميزة تتجاوز العتبة المحددة\n"
+          ]
+        }
+      ],
       "source": [
         "c=find_distinctive_words(data_trian_df)"
       ]
