--- a/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
+++ b/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +55,7 @@
         "id": "YW-gWbvC94p7",
         "outputId": "4f41cdd6-7c63-428f-a8e3-707207bdc0ad"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "id": "99XfGhFs-Gv1",
         "outputId": "a56e2507-3e23-421f-b11e-85bebf0655a9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "af6058ed"
       },
@@ -163,7 +163,7 @@
         "id": "NEl1hW2r-xdQ",
         "outputId": "a8b688bc-9fe2-43c2-d702-a133ac65bfbf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "-1-g4NtB1tvt"
       },
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "84ktokFcRdPC",
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "DxkfbIsVRdPG",
@@ -677,7 +677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "TS-KMKAZRdPI"
       },
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "N_23HLmFRdPJ",
@@ -731,7 +731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "RMZktM8dRdPK",
@@ -1105,12 +1105,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "ICrvRCc8ucDZ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "bc1e0e3c-9991-4733-9bf3-0a5da8432844"
       },
@@ -1452,7 +1451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "C7dwutrlRdPP",
@@ -1483,7 +1482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "wjpkkSQYRdPR",
         "colab": {
@@ -1522,7 +1521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "qhXVRQJF1tvv"
       },
@@ -1537,7 +1536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "RgCuQfiJRdPT",
         "colab": {
@@ -1566,7 +1565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "C468wqkyRdPU",
         "colab": {
@@ -1961,7 +1960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "c1b8c64b",
         "colab": {
@@ -1994,7 +1993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "JbGt-YXRRdPX",
         "colab": {
@@ -2027,7 +2026,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "vteyepusRdPY",
         "colab": {
@@ -2082,7 +2081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "BaGM7BkZRdPa"
       },
@@ -2117,7 +2116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "Z4c4zvp2RdPc",
         "colab": {
@@ -2138,7 +2137,7 @@
       "source": [
         "def tokenize_arabic_only(text):\n",
         "    tokens = wordpunct_tokenize(text)\n",
-        "    arabic_tokens = [token for token in tokens if regex.match(r\"^\\p{IsArabic}+$\", token)]\n",
+        "    # arabic_tokens = [token for token in tokens if regex.match(r\"^\\p{IsArabic}+$\", token)]\n",
         "    return arabic_tokens\n",
         "\n",
         "data_trian_df['tokens'] = data_trian_df['sent'].apply(tokenize_arabic_only)\n",
@@ -2153,7 +2152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "pJZ0DAfPRdPd",
         "colab": {
@@ -2500,7 +2499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "zU65GmMbP2Sm",
         "colab": {
@@ -2600,7 +2599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "GT2alNmjRdP5"
       },
@@ -2644,7 +2643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "HDy5nPVLRdP6"
       },
@@ -2686,7 +2685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "feLDhboORdP8",
         "colab": {
@@ -2916,7 +2915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "V87VeNoVRdP9",
         "colab": {
@@ -3090,7 +3089,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "aCyu7xtsRdP-",
         "colab": {
@@ -3176,7 +3175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "3WFp0g3DQ72V"
       },
@@ -3294,12 +3293,12 @@
       "metadata": {
         "id": "U0Lwayi80WBf"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "ySDEpejjRdQB",
         "colab": {
