--- a/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
+++ b/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
@@ -2960,7 +2960,76 @@
         "id": "JmoYTIAFutAR"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        " خارج المفردات (OOV)\n",
+        "الخطوة 1: تحميل نماذج تضمين الكلمات المدربة مسبقًا\n",
+        "سنستخدم مكتبة Gensim لتحميل نماذج تضمين الكلمات.\n",
+        "\n",
+        "\n",
+        "!pip install gensim==4.3.1  # تأكد من تثبيت Gensim\n",
+        "from gensim.models import Word2Vec, FastText, KeyedVectors\n",
+        "Use code with caution\n",
+        "Word2Vec:\n",
+        "\n",
+        "word2vec_model = KeyedVectors.load_word2vec_format('path/to/word2vec/model')  # استبدل بمسار نموذج Word2Vec\n",
+        "Use code with caution\n",
+        "FastText:\n",
+        "\n",
+        "fasttext_model = FastText.load_fasttext_format('path/to/fasttext/model')  # استبدل بمسار نموذج FastText\n",
+        "Use code with caution\n",
+        "GloVe:\n",
+        "\n",
+        "glove_model = KeyedVectors.load_word2vec_format('path/to/glove/model', binary=False)  # استبدل بمسار نموذج GloVe\n",
+        "Use code with caution\n",
+        "ملاحظة: يجب استبدال 'path/to/model' بالمسار الفعلي لنموذج التضمين المدرب مسبقًا.\n",
+        "\n",
+        "الخطوة 2: حساب نسبة الكلمات خارج المفردات (OOV)\n",
+        "\n",
+        "def calculate_oov_rate(model, tokens):\n",
+        "  oov_count = 0\n",
+        "  for token in tokens:\n",
+        "    if token not in model.key_to_index:  # أو model.wv.vocab لـ Word2Vec\n",
+        "      oov_count += 1\n",
+        "  oov_rate = oov_count / len(tokens)\n",
+        "  return oov_rate\n",
+        "\n",
+        "# استخراج جميع الكلمات من بيانات التدريب\n",
+        "all_tokens = [token for tokens_list in data_trian_df['tokens'] for token in tokens_list]\n",
+        "\n",
+        "# حساب نسبة OOV لكل نموذج\n",
+        "word2vec_oov_rate = calculate_oov_rate(word2vec_model, all_tokens)\n",
+        "fasttext_oov_rate = calculate_oov_rate(fasttext_model, all_tokens)\n",
+        "glove_oov_rate = calculate_oov_rate(glove_model, all_tokens)\n",
+        "\n",
+        "print(f\"Word2Vec OOV rate: {word2vec_oov_rate}\")\n",
+        "print(f\"FastText OOV rate: {fasttext_oov_rate}\")\n",
+        "print(f\"GloVe OOV rate: {glove_oov_rate}\")\n",
+        "Use code with caution\n",
+        "الخطوة 3: ملاحظات واستنتاجات\n",
+        "بعد حساب نسبة OOV لكل نموذج، قارن النتائج ولاحظ أي نموذج لديه أقل نسبة. قد تجد أن FastText لديه نسبة OOV أقل من Word2Vec و GloVe، وذلك بفضل قدرته على التعامل مع الكلمات خارج المفردات باستخدام تمثيل n-grams.\n",
+        "\n",
+        "ملاحظات:\n",
+        "\n",
+        "قد تختلف نسبة OOV بشكل كبير اعتمادًا على بيانات التدريب ونوع النص المستخدم.\n",
+        "قد يكون من المفيد استخدام تقنيات معالجة إضافية قبل تضمين الكلمات، مثل تطبيع النص أو إزالة كلمات التوقف، لتحسين الأداء.\n",
+        "يمكن استخدام نسبة OOV كمؤشر على مدى جودة نموذج التضمين في تمثيل النص العربي.\n",
+        "استنتاجات:\n",
+        "\n",
+        "نموذج التضمين الأفضل هو النموذج الذي لديه أقل نسبة OOV، حيث إنه قادر على تمثيل عدد أكبر من الكلمات في بيانات التدريب.\n",
+        "من المهم استخدام نموذج تضمين مدرب مسبقًا عالي الجودة لتحسين الأداء في مهام معالجة اللغة الطبيعية.\n",
+        "يمكن استخدام تقنيات معالجة إضافية لتحسين الأداء وتقليل نسبة OOV.\n",
+        "تنويه\n",
+        "لا تحتوي هذه التعليمات على أي مسار لنموذج تضمين حقيقي. يجب عليك تحميل نماذج تضمين مدربة مسبقًا من مصادر موثوقة مثل Hugging Face أو Google's pre-trained models واستبدال المسارات في الكود وفقًا لذلك."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bFYSAF7FRKLT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
