--- a/Copy_of_DU2425S1_NLP_HW1_BY__your_name_.ipynb
+++ b/Copy_of_DU2425S1_NLP_HW1_BY__your_name_.ipynb
@@ -55,7 +55,7 @@
         "id": "YW-gWbvC94p7",
         "outputId": "dad31787-f2e0-4584-afcb-2976e89232fd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "id": "99XfGhFs-Gv1",
         "outputId": "7f1e804c-5dd0-4f3f-d678-cb0ad079046d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "id": "NEl1hW2r-xdQ",
         "outputId": "8d3871d7-9bf6-43e1-9f27-829c4154e9cf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "af6058ed"
       },
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "-1-g4NtB1tvt"
       },
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "84ktokFcRdPC",
@@ -312,14 +312,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "DxkfbIsVRdPG",
         "outputId": "0020d4db-38bb-45ea-ab0a-d0bf4e0528aa",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
@@ -677,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "TS-KMKAZRdPI"
       },
@@ -701,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "N_23HLmFRdPJ",
@@ -731,13 +730,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "RMZktM8dRdPK",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "8c117a35-4b3b-42e4-d865-7418ab0252c1"
       },
@@ -1105,12 +1103,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ICrvRCc8ucDZ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "6c5efd3a-0e92-4bda-9530-0ed67423db1b"
       },
@@ -1452,7 +1449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "C7dwutrlRdPP",
@@ -1483,7 +1480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "wjpkkSQYRdPR",
         "colab": {
@@ -1522,7 +1519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "qhXVRQJF1tvv"
       },
@@ -1537,7 +1534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "RgCuQfiJRdPT",
         "colab": {
@@ -1566,12 +1563,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "C468wqkyRdPU",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "e05695a8-a289-493f-914f-a1fd3f8da4ac"
       },
@@ -2941,7 +2937,7 @@
         "id": "T5M660hgU8qI",
         "outputId": "d6e44a53-0997-4286-bfa4-9f318d5a87b2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2971,7 +2967,7 @@
         "id": "OVoHOOJwWDGs",
         "outputId": "ee3c89c1-6e3c-4913-9753-4d61d872d171"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2995,11 +2991,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "JmoYTIAFutAR"
+        "id": "JmoYTIAFutAR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a3544e41-7064-4366-895f-5b23b5ba84ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[==================================================] 100.0% 104.8/104.8MB downloaded\n",
+            "GloVe model loaded successfully.\n",
+            "[==================================================] 100.0% 958.5/958.4MB downloaded\n",
+            "FastText model loaded successfully.\n",
+            "Error: File not found at /content/GloVe-Arabic/vectors.txt. Please download it from the repository.\n",
+            "GloVe OOV rate: 0.1976\n",
+            "FastText OOV rate: 0.5600\n",
+            "vec2word model not loaded.\n"
+          ]
+        }
+      ],
       "source": [
         " خارج المفردات (OOV)\n",
         "الخطوة 1: تحميل نماذج تضمين الكلمات المدربة مسبقًا\n",
@@ -3064,7 +3082,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# prompt:  قم بتحميل نماذج تضمين مدربة مسبقا وهي glove و fasttext و vec2word باللغة\n",
+        "# العربية واحسب نسبة الكلمات في بيانات التدريب والتي تعبتر خارج المفردات OOV لكل منها،\n",
+        "# ثبت مالحظاتك واستنتاجاتك.\n",
+        "# كيف استخدم النموزج الموجود في هذا الرابط لتحقيق ما سبق https://github.com/tarekeldeeb/GloVe-Arabic\n",
+        "\n",
+        "import pandas as pd\n",
+        "from gensim.models import KeyedVectors, FastText\n",
+        "from nltk.tokenize import wordpunct_tokenize\n",
+        "import regex\n",
+        "\n",
+        "# Assuming data_trian_df is already defined and contains a 'tokens' column\n",
+        "\n",
+        "def calculate_oov_rate(model, tokens):\n",
+        "    oov_count = 0\n",
+        "    for token in tokens:\n",
+        "        try:\n",
+        "            model[token]  # Check if the token exists in the model's vocabulary\n",
+        "        except KeyError:\n",
+        "            oov_count += 1\n",
+        "    oov_rate = oov_count / len(tokens) if tokens else 0 # Handle empty token lists\n",
+        "    return oov_rate\n",
+        "\n",
+        "# Download the GloVe model from the provided GitHub repository\n",
+        "!git clone https://github.com/tarekeldeeb/GloVe-Arabic.git\n",
+        "\n",
+        "# Load the GloVe model (replace with the actual path if needed)\n",
+        "glove_path = '/content/GloVe-Arabic/vectors.txt' # update the path if needed\n",
+        "glove_model = KeyedVectors.load_word2vec_format(glove_path)\n",
+        "\n",
+        "\n",
+        "# Example usage with your data (replace with actual model paths)\n",
+        "# Assuming 'data_trian_df' and 'all_tokens' are already defined\n",
+        "all_tokens = [token for tokens_list in data_trian_df['tokens'] for token in tokens_list]\n",
+        "\n",
+        "glove_oov_rate = calculate_oov_rate(glove_model, all_tokens)\n",
+        "\n",
+        "# Example for FastText (you need to download a pre-trained model)\n",
+        "# fasttext_model = FastText.load(\"path/to/your/fasttext/model\") # Replace with the correct path to your model\n",
+        "# fasttext_oov_rate = calculate_oov_rate(fasttext_model, all_tokens)\n",
+        "\n",
+        "print(f\"GloVe OOV rate: {glove_oov_rate}\")\n",
+        "# print(f\"FastText OOV rate: {fasttext_oov_rate}\") # Uncomment this once you have a FastText model\n",
+        "\n",
+        "\n",
+        "# Note: You still need to download and load the FastText model\n",
+        "#       and potentially other embedding models. The code provides\n",
+        "#       the necessary functions and demonstrates the usage with\n",
+        "#       the GloVe model downloaded from the specified GitHub repo.\n",
+        "\n",
+        "# Further Analysis and Observations (add your analysis here):\n",
+        "#  - Compare OOV rates across models\n",
+        "#  - Relate OOV rates to model performance (e.g. downstream task accuracy)\n",
+        "#  - Discuss the impact of OOV words on different NLP tasks\n",
+        "#  - Potential improvements: subword tokenization, data augmentation"
+      ],
       "metadata": {
         "id": "bFYSAF7FRKLT"
       },
