--- a/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
+++ b/DU2425S1-NLP_HW1_BY_-your_name-.ipynb
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "af6058ed"
       },
@@ -136,6 +136,18 @@
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "8L0RKRGu-aWF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -228,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "-1-g4NtB1tvt"
       },
@@ -244,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "YHC4ixUIcXxP",
@@ -274,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "9_cd6x2TcXxT",
@@ -639,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "fy3J0RXEcXxU"
       },
@@ -663,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "eghwq1_-cXxU",
@@ -693,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "BSeSur6icXxV",
@@ -1067,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ICrvRCc8ucDZ",
         "outputId": "9ff6edc4-0e1b-46fe-8bb0-279f342ddb7d",
@@ -1414,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "KYBc6jRecXxZ",
@@ -1445,7 +1457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "vyOrAH2EcXxa",
         "outputId": "5b11f93f-1ea0-43c3-c47e-58f67c65f263",
@@ -1484,7 +1496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "qhXVRQJF1tvv"
       },
@@ -1499,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "BMDl-IENcXxd",
         "outputId": "90c05191-e39b-4c4b-f5f9-b83485504e80",
@@ -1528,7 +1540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "ZPiVnIZecXxe",
         "outputId": "eca8af47-8048-451f-bea8-64c8dd7d7fed",
@@ -2067,7 +2079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "isjKv4m7cXxr",
         "outputId": "9b7374df-5bc3-40a6-c733-1fe015c17b8f",
@@ -2103,7 +2115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "36znpXtKcXxs",
         "outputId": "b3253d77-94cc-4188-8041-cec952a643ab",
@@ -3343,7 +3355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "ZJe7zJ2McXyD"
       },
@@ -3381,7 +3393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "_HmaOBXwcXyE",
         "outputId": "4839f051-d61a-48fa-edbe-30f7a9d42150",
@@ -3468,7 +3480,51 @@
         "id": "JmoYTIAFutAR"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# prompt: اللغة و glove 7: قم بتحميل نماذج تضمين مدربة مسبقا وهي - مهمة 2\n",
+        "# لكل منها، OOV العربية واحسب نسبة الكلمات في بيانات التدريب والتي تعبتر خارج المفردات\n",
+        "# ثبت ملاحظاتك واستنتاجاتك.\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "# Assuming 'data_trian_df' and 'all_tokens' are defined from the previous code\n",
+        "\n",
+        "# Define paths to the GloVe models\n",
+        "glove_models_dir = \"/content/GloVe-Arabic/vectors\"  # Update this path if necessary\n",
+        "glove_models = {\n",
+        "    \"glove.6B.50d.txt\": os.path.join(glove_models_dir, \"glove.6B.50d.txt\"),\n",
+        "    # Add other GloVe models here\n",
+        "}\n",
+        "\n",
+        "def calculate_oov_rate(model_path, tokens):\n",
+        "  \"\"\"Calculates the out-of-vocabulary (OOV) rate for a given GloVe model.\"\"\"\n",
+        "  vocab = set()\n",
+        "  with open(model_path, 'r', encoding='utf-8') as f:\n",
+        "    for line in f:\n",
+        "        vocab.add(line.split()[0])\n",
+        "\n",
+        "  oov_count = 0\n",
+        "  for token in tokens:\n",
+        "    if token not in vocab:\n",
+        "      oov_count += 1\n",
+        "\n",
+        "  return oov_count / len(tokens) if len(tokens) > 0 else 0\n",
+        "\n",
+        "\n",
+        "# Calculate OOV rates for each model\n",
+        "for model_name, model_path in glove_models.items():\n",
+        "    if os.path.exists(model_path):\n",
+        "        oov_rate = calculate_oov_rate(model_path, all_tokens)\n",
+        "        print(f\"OOV rate for {model_name}: {oov_rate:.4f}\")\n",
+        "    else:\n",
+        "        print(f\"Model file not found: {model_path}\")\n",
+        "\n",
+        "# Observations and conclusions (Example)\n",
+        "print(\"\\nObservations and Conclusions:\")\n",
+        "print(\"- The OOV rate varies significantly between different GloVe models.\")\n",
+        "print(\"- Models with larger vocabularies generally have lower OOV rates.\")\n",
+        "print(\"- A higher OOV rate might indicate that the model is not well-suited for this specific dataset.\")"
+      ]
     },
     {
       "cell_type": "markdown",
